crates/widgets/src/snapshots/widgets__toast__tests__a_toast_stack_shows_the_newest_on_top.snap
---
source: crates/widgets/src/toast.rs
assertion_line: 343
expression: "painted(&toasts, (60, 20))"
---
"                                                            "
"                 ╭────────────────────────────────────────╮ "
"                 │ i Saved                                │ "
"                 │ The playlist was written.              │ "
"                 ╰────────────────────────────────────────╯ "
"                                                            "
"                 ╭────────────────────────────────────────╮ "
"                 │ ✗ Scan failed                          │ "
"                 ╰────────────────────────────────────────╯ "
"                                                            "
"                 ╭────────────────────────────────────────╮ "
"                 │ i Hello                                │ "
"                 ╰────────────────────────────────────────╯ "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
